<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:paddingBottom="26px"
    app:cardBackgroundColor="#F6F9FA"
    app:cardCornerRadius="11dp"
    app:cardElevation="0dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Text View to display Course Name-->

        <!--Text VIew to display COurse Rating-->
        <!--Image used in present in drawable folder-->

        <TextView
            android:id="@+id/reviewName"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="7dp"
            android:text="Shirley Qi"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/reviewRating"
            android:layout_width="76dp"
            android:layout_height="22dp"
            android:layout_above="@+id/reviewText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="127dp"
            android:layout_marginLeft="258dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="57dp"
            android:layout_marginBottom="0dp"
            android:layout_toEndOf="@+id/reviewName"
            android:layout_toRightOf="@id/reviewName"
            android:text="@string/restaurant_rating"
            android:textColor="@color/black"
            android:textSize="11sp" />

        <Button
            android:id="@+id/deleteReview"
            android:layout_width="42dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/reviewText"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="188dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="11dp"
            android:layout_marginBottom="-2dp"
            android:layout_toEndOf="@+id/reviewName"
            android:background="@drawable/delete_transparent_bg" />

        <TextView
            android:id="@+id/reviewText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reviewName"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:drawablePadding="2dp"
            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
            android:textSize="11dp" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>