...
            android:layout_marginLeft="50px"
            android:layout_marginTop="30px"
            android:text="Reviews"
            android:textSize="50px" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/review_list"
            android:layout_width="match_parent"
            android:layout_height="255dp"
            android:layout_gravity="center" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EDF4F6">

            <EditText

                android:id="@+id/reviewTextBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="24dp"
                android:layout_marginTop="63dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="7dp"
                android:layout_toStartOf="@+id/reviewSendButton"
                android:background="@color/inner_boxes"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/reviewSendButton"
                android:layout_width="60dp"
...
                android:layout_marginBottom="-30dp"
                android:background="@drawable/create_foodo_list_popup_button_background"
                android:elevation="0dp"
                android:text="Send" />

            <Spinner
                android:id="@+id/choose_rating_spinner"
                android:layout_width="107dp"
                android:layout_height="36dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
...
